# util-readaloud

./: .gitignore  INSTALL.md  README.md  RUN.md  config.toml  pyproject.toml  requirements.txt
scripts/: voice_polish.sh
src/: read_aloud.py
